# roea-ai

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  PROGRESS.md  QUICKSTART.md  README.md  SECURITY.md  UI-plan.md  deny.toml  go.mod  go.sum  justfile  publish.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  ci.yml.disabled  docs.yml.disabled  infra.yml  metrics.yml.disabled  nightly.yml.disabled  release.yml  release.yml.disabled  security.yml
agents/: bug-fixer.md  docs-writer.md  general-coder.md  reviewer.md  test-writer.md
cmd/roead/: main.go
crates/roea-agent/: Cargo.toml  build.rs
crates/roea-agent/benches/: network_monitor_bench.rs  process_monitor_bench.rs  signature_bench.rs  storage_bench.rs
crates/roea-agent/src/: lib.rs  main.rs
crates/roea-agent/src/bpf/: process_monitor.bpf.c
crates/roea-agent/src/file/: mod.rs  proc_fd.rs  tests.rs
crates/roea-agent/src/grpc/: mod.rs
crates/roea-agent/src/monitor/: ebpf_monitor.rs  mod.rs  sysinfo_monitor.rs  tests.rs
crates/roea-agent/src/monitor/snapshots/: tests__snapshot_tests__ai_agent_tree.snap  tests__snapshot_tests__shell_tree_structure.snap
crates/roea-agent/src/network/: mod.rs  proc_net.rs  tests.rs
crates/roea-agent/src/notification/: backends.rs  config.rs  manager.rs  mod.rs
crates/roea-agent/src/observability/: metrics.rs  mod.rs  sentry.rs
crates/roea-agent/src/osquery/: mod.rs
crates/roea-agent/src/protection/: mod.rs
crates/roea-agent/src/storage/: mod.rs
crates/roea-agent/src/telemetry/: mod.rs
crates/roea-agent/src/tui/: app.rs  mod.rs  ui.rs  widgets.rs
crates/roea-common/: Cargo.toml
crates/roea-common/src/: events.rs  lib.rs  platform.rs  security.rs  signatures.rs
crates/roea-ui/: index.html  package-lock.json  package.json  playwright.config.ts
crates/roea-ui/src/: App.tsx  styles.css
crates/roea-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/roea-ui/src-tauri/src/: grpc_client.rs  main.rs
crates/roea-ui/src/components/: DetailsPanel.tsx  EventTable.tsx  Header.tsx  ProcessGraph.tsx  ProcessTree.tsx  SearchBar.tsx  Sidebar.tsx  StatsBar.tsx
crates/roea-ui/src/lib/: types.ts
crates/roea-ui/tests/e2e/: claude-code-session.spec.ts  cursor-session.spec.ts  disconnected.spec.ts  long-running.spec.ts  multi-agent.spec.ts  performance.spec.ts
crates/roea-ui/tests/e2e/components/: keyboard-navigation.spec.ts  process-graph.spec.ts  real-time-updates.spec.ts  responsive-design.spec.ts  search-bar.spec.ts
crates/roea-ui/tests/e2e/fixtures/: mock-data.ts  tauri-mock.ts
crates/tuai/: Cargo.toml  build.rs
crates/tuai-common/: Cargo.toml
crates/tuai-common/src/: events.rs  lib.rs  platform.rs
crates/tuai/src/: lib.rs  main.rs
crates/tuai/src/bpf/: process_monitor.bpf.c
crates/tuai/src/file/: mod.rs  proc_fd.rs  tests.rs  windows_file.rs
crates/tuai/src/grpc/: mod.rs
crates/tuai/src/monitor/: ebpf_monitor.rs  mod.rs  sysinfo_monitor.rs  tests.rs
crates/tuai/src/network/: mod.rs  proc_net.rs  tests.rs  windows_net.rs
crates/tuai/src/protection/: mod.rs
crates/tuai/src/storage/: mod.rs
crates/tuai/src/tui/: app.rs  events.rs  mod.rs  ui.rs  widgets.rs
deploy/docker/: Dockerfile.agent-runtime  Dockerfile.roead  Dockerfile.web  docker-compose.yml
deploy/docker/config/: roea.yaml
deploy/k8s/base/: configmap.yaml  kustomization.yaml  namespace.yaml  roead-deployment.yaml
docs/: PREVENTION_MODE.md  generate_ceo_pdf.py  monitoring.md
examples/: notify.toml  protect.toml
infra/: .gitignore  README.md
infra/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
infra/environments/prod/: main.tf  terraform.tfvars.example  variables.tf
infra/modules/hetzner-runner/: main.tf  outputs.tf  variables.tf
infra/scripts/: bootstrap.sh  setup-runner.sh
internal/api/: router.go
internal/api/handlers/: agent.go  git.go  process.go  task.go
internal/core/agent/: pool.go
internal/core/execution/: engine.go
internal/core/git/: manager.go
internal/core/process/: tracker.go
internal/core/task/: manager.go
internal/crypto/: age.go  keys.go  payload.go
internal/executor/local/: executor.go
internal/fossil/: artifacts.go  process_events.go  store.go  tickets.go  wiki.go
internal/mcp/: server.go
internal/models/: router.go
pkg/types/: agent.go  config.go  crypto.go  mcp.go  process.go  task.go
project-status/: 2026-01-13.md  README.md
proto/: roea.proto  tuai.proto
scripts/: ralph-wiggum.sh
signatures/: aider.yaml  claude_code.yaml  cursor.yaml  lm_studio.yaml  localai.yaml  ollama.yaml  windsurf.yaml
web/: next.config.js  package-lock.json  package.json  test-ui.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/agents/: AgentList.tsx
web/src/components/kanban/: CreateTaskModal.tsx  KanbanBoard.tsx  TaskCard.tsx
web/src/components/monitor/: ExecutionMonitor.tsx
web/src/components/process/: ProcessGraph.tsx  index.ts
website/: .gitignore  package-lock.json  package.json
website/docs/: contributing.md  download.md  index.md
website/docs/.vitepress/: config.ts
website/docs/.vitepress/theme/: custom.css
website/docs/features/: dashboard.md  file-access.md  network-tracking.md  process-graph.md  process-monitoring.md  search.md
website/docs/features/agents/: aider.md  claude-code.md  copilot.md  cursor.md  windsurf.md
website/docs/guide/: agent-detection.md  how-it-works.md  installation.md  introduction.md  quick-start.md  requirements.md  storage.md
website/docs/reference/: configuration.md  ebpf.md  environment.md  faq.md  opentelemetry.md  osquery.md  storage.md  troubleshooting.md
