[package]
name = "roea-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "roea-ai monitoring daemon"

[dependencies]
roea-common = { path = "../roea-common" }

# Async
tokio = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Storage
duckdb = { workspace = true }

# System info (fallback/cross-platform)
sysinfo = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Config
directories = { workspace = true }
toml = { workspace = true }

# Regex
regex = { workspace = true }

# Sync and async
parking_lot = { workspace = true }
futures-core = { workspace = true }
tokio-stream = { workspace = true }
async-stream = "0.3"

# Unix-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = { workspace = true }
