[package]
name = "roea-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "roea-ai monitoring daemon"

[dependencies]
roea-common = { path = "../roea-common" }

# Async
tokio = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Storage
duckdb = { workspace = true }

# System info (fallback/cross-platform)
sysinfo = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Config
directories = { workspace = true }
toml = { workspace = true }

# Regex
regex = { workspace = true }

# Sync and async
parking_lot = { workspace = true }
futures-core = { workspace = true }
tokio-stream = { workspace = true }
async-stream = "0.3"

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

# Error tracking
sentry = { workspace = true }

# Unix-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
tempfile = "3.10"
mockall = "0.13"
test-case = "3.3"
insta = { version = "1.40", features = ["json"] }

[[bench]]
name = "process_monitor_bench"
harness = false

[[bench]]
name = "network_monitor_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "signature_bench"
harness = false
