[package]
name = "roea-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Common types and traits for roea-ai"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
regex-lite = "0.1"
futures-core = { workspace = true }
